--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
 
     "http://web2.utc.edu/~pbj882/MATH2200-1/MATH2200Homework.pdf":
     {
-      "alert"    : "The Linea Algebra homework page has been updated.",
+      "alert"    : "The Linear Algebra homework page has been updated.",
       "frequency": 1440
     }
   }
